--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,4 +72,7 @@
         android:layout_below="@+id/toggleBeginner"
         android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+t hube-->
+    </RelativeLayout>
+
+    <!--test for gi
