--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.unscripted.www.fitnessappprototype.MainActivity">
 
-    <Button
-        android:text="@string/start"
+    <TextView
+        android:id="@+id/myAwesomeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:id="@+id/button"
-        android:layout_alignParentBottom="true"
+        android:text="CHOOSE LEVEL"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        android:id="@+id/imageButton3"
+        android:layout_below="@+id/imageButton4"
+        android:layout_alignStart="@+id/imageButton4"
+        android:layout_marginTop="11dp" />
 
     <ToggleButton
         android:text="@string/togglebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
         android:id="@+id/toggleBeginner"
         android:textOn="@string/beginner"
         android:textOff="Beginner"
         android:background="@drawable/my_btn_toggle"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignBaseline="@+id/toggleNovice"
+        android:layout_alignBottom="@+id/toggleNovice"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp" />
+
+    <ImageButton
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        android:id="@+id/imageButton4"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/toggleNovice" />
+
+    <ImageButton
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        android:id="@+id/imageButton"
+        android:layout_alignTop="@+id/imageButton4"
+        android:layout_alignEnd="@+id/toggleAdvanced"
+        android:layout_marginEnd="10dp" />
+
+    <ImageButton
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        android:id="@+id/imageButton5"
+        android:layout_alignTop="@+id/imageButton3"
+        android:layout_alignStart="@+id/imageButton" />
+
+    <TextView
+        android:text="CHOOSE BODY PART"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:id="@+id/textView4"
+        android:layout_above="@+id/imageButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
+    <ToggleButton
+        android:text="@string/togglebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/toggleNovice"
+        android:textOn="@string/novice"
+        android:textOff="Novice"
+        android:background="@drawable/my_btn_toggle"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/myAwesomeTextView"
+        android:layout_centerHorizontal="true" />
 
     <ToggleButton
         android:text="@string/togglebutton"
@@ -41,35 +96,31 @@
         android:background="@drawable/my_btn_toggle"
         android:layout_alignBaseline="@+id/toggleNovice"
         android:layout_alignBottom="@+id/toggleNovice"
-        android:layout_alignParentEnd="true" />
+        android:layout_toEndOf="@+id/myAwesomeTextView"
+        android:layout_marginStart="12dp" />
 
-    <ToggleButton
-        android:text="@string/togglebutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/toggleNovice"
-        android:textOn="@string/novice"
-        android:textOff="Novice"
-        android:background="@drawable/my_btn_toggle"
-        android:layout_above="@+id/textView4"
+    <Button
+        android:text="@string/home"
+        android:layout_width="130sp"
+        android:layout_height="60sp"
+        android:id="@+id/button1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="@string/workout"
+        android:layout_width="130sp"
+        android:layout_height="60sp"
+        android:id="@+id/button2"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:id="@+id/myAwesomeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="CHOOSE LEVEL"
-        android:textSize="20sp" />
-
-    <TextView
-        android:text="CHOOSE BODY PART"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/toggleBeginner"
-        android:layout_alignParentStart="true" />
+    <Button
+        android:text="@string/profile"
+        android:layout_width="130sp"
+        android:layout_height="60sp"
+        android:id="@+id/button3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
