--- a/app/src/main/res/layout/testPageLeo.xml
+++ b/app/src/main/res/layout/testPageLeo.xml
@@ -32,9 +32,11 @@
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        <!-- testing pop up alert-->
+        <!-- testing pop up alert
         android: alertDialogBuilder.setPositiveButton(CharSequence text,DialogInterface.OnClickListener listener)
-        android: alertDialogBuilder.setPositiveButton (button1.OnClickListener)
+        android: alertDialogBuilder.setPositiveButton (button1.OnClickListener)-->
+
+
     />
 
     <Button
@@ -44,5 +46,24 @@
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="Description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewDescription"
+        android:layout_below="@+id/myAwesomeTextView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="20dp"
+        android:layout_toStartOf="@+id/button2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:hint="text @android:string/fingerprint_icon_content_description"
+        android:paddingBottom="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        tools:layout_width="wrap_content" />
 
 </RelativeLayout>
