--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="0dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="#CCCCCC"/>
+    <corners
+        android:radius="1dp"/>
     <padding
         android:left="10dp"
         android:right="10dp"
         android:top="10dp"
         android:bottom="10dp"/>
-    <solid android:color="#000000" />
+
 
 
 </shape>
