--- a/app/src/main/res/layout/mainactivity.xml
+++ b/app/src/main/res/layout/mainactivity.xml
@@ -20,11 +20,12 @@
     <ImageButton
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@android:drawable/btn_star_big_on"
+        app:srcCompat="@drawable/arms"
         android:id="@+id/imageButton3"
         android:layout_below="@+id/imageButton4"
         android:layout_alignStart="@+id/imageButton4"
-        android:layout_marginTop="11dp" />
+        android:layout_marginTop="11dp"
+        android:background="@drawable/border"/>
 
     <ToggleButton
         android:text="@string/togglebutton"
@@ -39,29 +40,32 @@
         android:layout_toStartOf="@+id/myAwesomeTextView" />
 
     <ImageButton
+        android:id="@+id/imageButton4"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:id="@+id/imageButton4"
         android:layout_below="@+id/toggleBeginner"
+        android:layout_marginTop="80dp"
         android:layout_toStartOf="@+id/toggleNovice"
-        android:layout_marginTop="80dp" />
+        app:srcCompat="@drawable/abs"
+        android:background="@drawable/border" />
 
     <ImageButton
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@android:drawable/btn_star_big_on"
+        app:srcCompat="@drawable/back"
         android:id="@+id/imageButton"
         android:layout_alignTop="@+id/imageButton4"
-        android:layout_toEndOf="@+id/toggleNovice" />
+        android:layout_toEndOf="@+id/toggleNovice"
+        android:background="@drawable/border"/>
 
     <ImageButton
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@android:drawable/btn_star_big_on"
+        app:srcCompat="@drawable/legs"
         android:id="@+id/imageButton5"
         android:layout_alignTop="@+id/imageButton3"
-        android:layout_alignStart="@+id/imageButton" />
+        android:layout_alignStart="@+id/imageButton"
+        android:background="@drawable/border"/>
 
     <TextView
         android:text="CHOOSE BODY PART"
