--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,6 +7,33 @@
     tools:context="com.unscripted.www.fitnessappprototype.ProfileActivity"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/image_count"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="Select Exercise For Your Stats"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        />
+
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_alignTop="@+id/image_view"></android.support.v4.view.ViewPager>
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_marginTop="25dp"
+        ></ImageView>
+
     <Button
         android:text="@string/home"
         android:layout_width="130sp"
@@ -36,5 +63,14 @@
         android:layout_alignParentEnd="true"
         tools:layout_editor_absoluteY="445dp"
         tools:layout_editor_absoluteX="251dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
