--- a/app/src/main/res/layout/workout.xml
+++ b/app/src/main/res/layout/workout.xml
@@ -32,21 +32,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:layout_marginBottom="76dp"
-        android:layout_above="@+id/workout_container"
-        android:layout_alignStart="@+id/workout_container"
-        android:layout_alignEnd="@+id/workout_container"
-        android:layout_alignParentTop="true" />
-
-
     <ListView
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="17dp"
         android:layout_above="@+id/button1"
         android:layout_centerHorizontal="true"
