--- a/app/src/main/res/drawable/my_btn_toggle.xml
+++ b/app/src/main/res/drawable/my_btn_toggle.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@color/btnLightgreen"  />
-    <item android:state_checked="true" android:drawable="@color/btnGreen"  />
+    <item android:state_checked="false" android:drawable="@color/btnLightYellow"  />
+    <item android:state_checked="true" android:drawable="@color/btnDarkYellow"  />
 </selector>
