--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,13 @@
         android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:srcCompat="@drawable/arms"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/arms_kari"
         android:id="@+id/imageButton3"
-        android:layout_below="@+id/imageButton4"
-        android:layout_alignStart="@+id/imageButton4"
-        android:layout_marginTop="11dp"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:layout_above="@+id/button1"
+        android:layout_alignStart="@+id/toggleBeginner" />
 
     <ToggleButton
         android:text="@string/togglebutton"
@@ -41,31 +40,31 @@
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_below="@+id/toggleBeginner"
-        android:layout_marginTop="80dp"
-        android:layout_toStartOf="@+id/toggleNovice"
-        app:srcCompat="@drawable/abs"
-        android:background="@drawable/border" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/abs_kari"
+        android:background="@drawable/border"
+        android:layout_below="@+id/textView4"
+        android:layout_alignStart="@+id/imageButton3"
+        android:layout_marginTop="11dp" />
 
     <ImageButton
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:srcCompat="@drawable/back"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/back_kari"
         android:id="@+id/imageButton"
+        android:background="@drawable/border"
         android:layout_alignTop="@+id/imageButton4"
-        android:layout_toEndOf="@+id/toggleNovice"
-        android:background="@drawable/border"/>
+        android:layout_alignEnd="@+id/toggleAdvanced" />
 
     <ImageButton
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:srcCompat="@drawable/legs"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/legs_kari"
         android:id="@+id/imageButton5"
-        android:layout_alignTop="@+id/imageButton3"
-        android:layout_alignStart="@+id/imageButton"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:layout_below="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton" />
 
     <TextView
         android:text="CHOOSE BODY PART"
@@ -73,9 +72,9 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:id="@+id/textView4"
+        android:layout_marginTop="17dp"
         android:layout_below="@+id/toggleBeginner"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp" />
+        android:layout_centerHorizontal="true" />
 
     <ToggleButton
         android:text="@string/togglebutton"
@@ -85,7 +84,7 @@
         android:textOn="@string/novice"
         android:textOff="Novice"
         android:background="@drawable/my_btn_toggle"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="12dp"
         android:layout_below="@+id/myAwesomeTextView"
         android:layout_centerHorizontal="true" />
 
