--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
         app:srcCompat="@drawable/arms_kari"
         android:id="@+id/imageButton3"
         android:background="@drawable/border"
-        android:layout_above="@+id/button1"
-        android:layout_alignStart="@+id/toggleBeginner" />
+        android:layout_below="@+id/imageButton4"
+        android:layout_alignStart="@+id/imageButton4" />
 
     <ToggleButton
         android:text="@string/togglebutton"
@@ -33,7 +33,6 @@
         android:id="@+id/toggleBeginner"
         android:textOn="@string/beginner"
         android:textOff="Beginner"
-        android:background="@drawable/my_btn_toggle"
         android:layout_alignBaseline="@+id/toggleNovice"
         android:layout_alignBottom="@+id/toggleNovice"
         android:layout_toStartOf="@+id/myAwesomeTextView" />
@@ -44,9 +43,10 @@
         android:layout_height="150dp"
         app:srcCompat="@drawable/abs_kari"
         android:background="@drawable/border"
-        android:layout_below="@+id/textView4"
-        android:layout_alignStart="@+id/imageButton3"
-        android:layout_marginTop="11dp" />
+        android:layout_marginLeft="11dp"
+        android:layout_alignTop="@+id/imageButton"
+        android:layout_alignStart="@+id/toggleBeginner"
+        android:layout_marginStart="11dp" />
 
     <ImageButton
         android:layout_width="150dp"
@@ -54,8 +54,9 @@
         app:srcCompat="@drawable/back_kari"
         android:id="@+id/imageButton"
         android:background="@drawable/border"
-        android:layout_alignTop="@+id/imageButton4"
-        android:layout_alignEnd="@+id/toggleAdvanced" />
+        android:layout_below="@+id/textView4"
+        android:layout_toEndOf="@+id/imageButton3"
+        android:layout_marginTop="12dp" />
 
     <ImageButton
         android:layout_width="150dp"
@@ -83,7 +84,6 @@
         android:id="@+id/toggleNovice"
         android:textOn="@string/novice"
         android:textOff="Novice"
-        android:background="@drawable/my_btn_toggle"
         android:layout_marginTop="12dp"
         android:layout_below="@+id/myAwesomeTextView"
         android:layout_centerHorizontal="true" />
@@ -95,7 +95,6 @@
         android:id="@+id/toggleAdvanced"
         android:textOn="@string/advanced"
         android:textOff="Advanced"
-        android:background="@drawable/my_btn_toggle"
         android:layout_alignBaseline="@+id/toggleNovice"
         android:layout_alignBottom="@+id/toggleNovice"
         android:layout_toEndOf="@+id/myAwesomeTextView" />
