--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:id="@+id/imageButton4"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:srcCompat="@drawable/abs_kari"
+        app:srcCompat="@drawable/abs_kar"
         android:background="@drawable/border"
         android:layout_marginLeft="11dp"
         android:layout_alignTop="@+id/imageButton"
