--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,65 +17,64 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:id="@+id/txtVwBodyPart"
+        android:text="CHOOSE BODY PART"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/toggleBeginner"
+        android:layout_centerHorizontal="true" />
+
     <ImageButton
+        android:id="@+id/imgBtnArms"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:srcCompat="@drawable/arms_kari"
-        android:id="@+id/imageButton3"
+        app:srcCompat="@drawable/arms"
         android:background="@drawable/border"
-        android:layout_below="@+id/imageButton4"
-        android:layout_alignStart="@+id/imageButton4" />
+        android:layout_below="@+id/imgBtnAbs"
+        android:layout_alignStart="@+id/imgBtnAbs" />
+
+    <ImageButton
+        android:id="@+id/imgBtnAbs"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/abs"
+        android:background="@drawable/border"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="17dp"
+        android:layout_below="@+id/txtVwBodyPart"
+        android:layout_alignStart="@+id/toggleBeginner" />
+
+    <ImageButton
+        android:id="@+id/imgBtnBack"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/back"
+        android:background="@drawable/border"
+        android:layout_below="@+id/imgBtnLegs"
+        android:layout_toEndOf="@+id/imgBtnArms" />
+
+    <ImageButton
+        android:id="@+id/imgBtnLegs"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/legs"
+        android:background="@drawable/border"
+        android:layout_below="@+id/txtVwBodyPart"
+        android:layout_toEndOf="@+id/imgBtnAbs" />
 
     <ToggleButton
+        android:id="@+id/toggleBeginner"
         android:text="@string/togglebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleBeginner"
         android:textOn="@string/beginner"
         android:textOff="Beginner"
         android:layout_alignBaseline="@+id/toggleNovice"
         android:layout_alignBottom="@+id/toggleNovice"
         android:layout_toStartOf="@+id/myAwesomeTextView" />
-
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/abs_kar"
-        android:background="@drawable/border"
-        android:layout_marginLeft="11dp"
-        android:layout_alignTop="@+id/imageButton"
-        android:layout_alignStart="@+id/toggleBeginner"
-        android:layout_marginStart="11dp" />
-
-    <ImageButton
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/back_kari"
-        android:id="@+id/imageButton"
-        android:background="@drawable/border"
-        android:layout_below="@+id/textView4"
-        android:layout_toEndOf="@+id/imageButton3"
-        android:layout_marginTop="12dp" />
-
-    <ImageButton
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/legs_kari"
-        android:id="@+id/imageButton5"
-        android:background="@drawable/border"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignStart="@+id/imageButton" />
-
-    <TextView
-        android:text="CHOOSE BODY PART"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:id="@+id/textView4"
-        android:layout_marginTop="17dp"
-        android:layout_below="@+id/toggleBeginner"
-        android:layout_centerHorizontal="true" />
 
     <ToggleButton
         android:text="@string/togglebutton"
