Got back images!

--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -63,7 +63,7 @@
         android:id="@+id/imageButton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        app:srcCompat="@drawable/fitn"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         />
