--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:id="@+id/imgBtnAbs"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        app:srcCompat="@drawable/abs_kari"
+        app:srcCompat="@drawable/abs_kar"
         android:background="@drawable/border"
         android:layout_marginLeft="11dp"
         android:layout_marginStart="17dp"
@@ -53,7 +53,7 @@
         android:layout_height="150dp"
         app:srcCompat="@drawable/back_kari"
         android:background="@drawable/border"
-        android:layout_below="@+id/imgBtnLegs"
+        android:layout_below="@+id/txtVwBodyPart"
         android:layout_toEndOf="@+id/imgBtnArms" />
 
     <ImageButton
@@ -62,8 +62,8 @@
         android:layout_height="150dp"
         app:srcCompat="@drawable/legs_kari"
         android:background="@drawable/border"
-        android:layout_below="@+id/txtVwBodyPart"
-        android:layout_toEndOf="@+id/imgBtnAbs" />
+        android:layout_below="@+id/imgBtnAbs"
+        android:layout_toEndOf="@+id/imgBtnArms" />
 
     <ToggleButton
         android:id="@+id/toggleBeginner"
