--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- References @ https://developers.google.com/youtube/android/player/register#Create_API_Keys **Karina
+                @ https://www.sitepoint.com/using-the-youtube-api-to-embed-video-in-an-android-app/ **Karina-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
