--- a/app/src/main/res/layout/activity_profile_test.xml
+++ b/app/src/main/res/layout/activity_profile_test.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- References @ http://stackoverflow.com/questions/2433432/please-verify-my-layout-bottom-button-keeps-coming-up-over-keyboard  **Karina
+                @http://android-steps.blogspot.ie/2015/08/profile-page-with-circular-image-view.html-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -31,6 +34,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:text="Personal Details"/>
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -38,6 +42,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:hint="Name"/>
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -45,6 +50,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:hint="Date of Birth (dd/mm/yy)"/>
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -52,6 +58,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:hint="Email"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -70,8 +77,6 @@
                 android:layout_marginRight="20dp"
                 android:text="Workout History"
                 />
-
-
         </LinearLayout>
     </ScrollView>
 
