--- a/app/src/main/res/layout/activity_profile_test.xml
+++ b/app/src/main/res/layout/activity_profile_test.xml
@@ -18,15 +18,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <com.joooonho.SelectableRoundedImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
+                android:id="@+id/imgView"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:scaleType="centerCrop"
                 android:src="@drawable/photo"
                 app:sriv_border_color="#e3d90e"
                 app:sriv_border_width="2dp"
                 app:sriv_oval="true" />
+
+            <Button
+                android:id="@+id/buttonLoadPicture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Load Picture"
+                android:layout_gravity="center"></Button>
 
             <TextView
                 android:layout_width="match_parent"
