--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -14,5 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:layout_width="160sp"
+        android:layout_height="40sp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginRight="120dp"
+        android:text="NEXT EXERCISE"
+        android:id="@+id/button4"
+        android:background="@color/btnLightYellow"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp" />
+
 
 </RelativeLayout>
