--- a/app/src/main/res/layout/activity_profile_test.xml
+++ b/app/src/main/res/layout/activity_profile_test.xml
@@ -29,7 +29,7 @@
                 app:sriv_border_color="#e3d90e"
                 app:sriv_border_width="2dp"
                 app:sriv_oval="true"
-                app:srcCompat="@drawable/photo"/>
+                android:src="@drawable/photo"/>
 
             <Button
                 android:id="@+id/buttonLoadPicture"
