--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="com.unscripted.www.fitnessappprototype.ExerciseActivity">
 
     <com.google.android.youtube.player.YouTubePlayerView
@@ -22,9 +23,19 @@
         android:text="NEXT EXERCISE"
         android:id="@+id/button4"
         android:background="@color/btnLightYellow"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="58dp"
+        android:layout_above="@+id/adView"
+        android:layout_centerHorizontal="true" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp" />
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
 
 
 </RelativeLayout>
